Add test with high CPU usage in thread